--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="image-container">
                 <img src="https://via.placeholder.com/150" alt="Placeholder Image"onerror="this.style.display='none'; this.nextElementSibling.style.display='block';>
                 <div class="error-message" style="display:none;">
-                    <p>Error loading image. Please try again later.</p>
+                    <p>No Image</p>
                 </div>
             </div>
         </div>
